--- a/Hotel/src/main/webapp/WEB-INF/web.xml
+++ b/Hotel/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,10 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
 	id="WebApp_ID" version="4.0">
 	<display-name>Hotel</display-name>
-	<welcome-file-list>
+	<!--<welcome-file-list>
 		<welcome-file>/WEB-INF/views/index.jsp</welcome-file>
 	</welcome-file-list>
-	
+	-->
 	<!-- 中文支援 -->
 	<filter>
 		<filter-name>springUtf8Encoding</filter-name>
